--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,15 @@
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   background-color: lightgreen;
   color: black;  
 }
 
+.button.Red {
+  background-color: red;
+}
 
+.button.Red:hover {
+  background-color: salmon;
+}
